# claude-radar

./: .env.example  .gitignore  README.md  pyproject.toml
config/: classify_schedule.yaml  escalation_criteria.yaml  known_incidents.yaml  model_tiers.yaml  schedule.yaml  search_terms.yaml
docs/: index.html
radar/: api.py  backtest.py  brief.py  classify.py  cli.py  cluster.py  collect.py  config.py  db.py  hashing.py  http_utils.py  leadtime.py  models.py  qa.py  scheduler.py  score.py  virality.py
radar/sources/: base.py  github.py  hackernews.py  mastodon.py  reddit.py  stackoverflow.py  x.py  youtube.py
radar/static/: dashboard.css  dashboard.js  index.html
tests/: conftest.py  test_api.py  test_backtest.py  test_brief.py  test_classifier.py  test_classify_integration.py  test_cluster.py  test_collect_integration.py  test_config.py  test_db.py  test_github_source.py  test_hackernews_source.py  test_hashing.py  test_http_utils.py  test_leadtime.py  test_mastodon_source.py  test_models.py  test_qa.py  test_reddit_source.py  test_scheduler.py  test_score.py  test_stackoverflow_source.py  test_x_source.py  test_youtube_source.py
tests/fixtures/anthropic/: brief_no_text_block.json  brief_text_response.json  classify_advertisement.json  classify_no_tool_use.json  classify_not_pain_point.json  classify_pain_point.json  classify_summary_too_long.json
tests/fixtures/github/: search_recent_page1.json  search_recent_page2.json  search_top_page1.json
tests/fixtures/hackernews/: empty_results.json  search_recent_page1_with_more.json  search_recent_page2.json  (+1 more)
(+23 files in other folders)
