[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-radar"
version = "0.1.0"
description = "Public-signal early-warning tool for Claude/API pain points"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[project.scripts]
radar = "radar.cli:main"

[tool.setuptools.packages.find]
include = ["radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
